5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1724_2524.log
== TEST (2019-05-14 12:42:32) 
-- CODE:
n=int(input())
from math import *
i=4
while(i<=n):
	if(i%2!=0):
		p=(sin(pi/i))/(sin((3*pi)/2*i))
		print(i round(p,4))
	else:
		p=(sin(pi/i))/(sin((2*pi)/i)
		print(i round(p,4))
	i=i+1
-- ERROR:
File "XXXX", line 7
    print(i round(p,4))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:42:54) 
-- CODE:
n=int(input())
from math import *
i=4
while(i<=n):
	if(i%2!=0):
		p=(sin(pi/i))/(sin((3*pi)/2*i))
		print(i ,round(p,4))
	else:
		p=(sin(pi/i))/(sin((2*pi)/i)
		print(i ,round(p,4))
	i=i+1
-- ERROR:
File "XXXX", line 10
    print(i ,round(p,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:44:19) 
-- CODE:
n=int(input())
from math import *
i=4
while(i<=n):
	if(i%2!=0):
		p=(sin(pi/i))/(sin((3*pi)/2*i))
		print(i ,round(p,4))
	else:
		p=(sin(pi/i))/(sin((2*pi)/i)
		print(i ,round(p,4))
	i=i+1
-- ERROR:
File "XXXX", line 10
    print(i ,round(p,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:45:48) 
-- CODE:
n=int(input())
from math import *
i=4
while(i<=n):
	if(i%2!=0):
		p=(sin(pi/i))/(sin((3*pi)/2*i))
		print(i ,round(p,4))
	else:
		p=(sin(pi/i))/(sin((2*pi)/i))
		print(i ,round(p,4))
	i=i+1
-- OUTPUT:
4 0.7071
5 -0.5878
6 0.5774
7 0.4339
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:48:54) 
-- CODE:
n=int(input())
from math import *
i=4
while(i<=n):
	if(i%2!=0):
		p=(sin(pi/i))/(sin((3*pi)/(2*i)))
		print(i ,round(p,4))
	else:
		p=(sin(pi/i))/(sin((2*pi)/i))
		print(i ,round(p,4))
	i=i+1
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:49:14) 
-- CODE:
n=int(input())
from math import *
i=4
while(i<=n):
	if(i%2!=0):
		p=(sin(pi/i))/(sin((3*pi)/(2*i)))
		print(i ,round(p,4))
	else:
		p=(sin(pi/i))/(sin((2*pi)/i))
		print(i ,round(p,4))
	i=i+1
-- EXECUTION TIME:
0.222008
-- TEST CASE 1:
---- input:
7
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
---- user output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
-- TEST CASE 2:
---- input:
5
---- correct output:
4 0.7071
5 0.7265
---- user output:
4 0.7071
5 0.7265
-- TEST CASE 3:
---- input:
16
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
8 0.5412
9 0.684
10 0.5257
11 0.6782
12 0.5176
13 0.6749
14 0.5129
15 0.6728
16 0.5098
---- user output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
8 0.5412
9 0.684
10 0.5257
11 0.6782
12 0.5176
13 0.6749
14 0.5129
15 0.6728
16 0.5098
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
